Updated to jdk 20 Added native cpp files and update build script